force-app/main/default/objects/Opportunity/fields/Term_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Term_Start_Date__c</fullName>
    <description>Contract term start date</description>
    <label>Term Start Date</label>
    <type>Date</type>
</CustomField>