force-app/main/default/objects/Opportunity/fields/Update_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Update_Forecast__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Update Forecast</label>
    <type>Checkbox</type>
</CustomField>